@@ -23,7 +23,6 @@ class Vpc_Root_Category_Component extends Vpc_Abstract
             );
         }
         $ret['componentName'] = trlVps('Category');
-        $ret['flags']['showInPageTreeAdmin'] = true;
         $ret['flags']['menuCategory'] = true;
         return $ret;
     }
