@@ -7,7 +7,6 @@ class Vpc_Root_TrlRoot_Chained_Component extends Vpc_Abstract
         $copySettings = array('editComponents');
         $copyFlags = array('subroot');
         $ret = Vpc_Chained_Abstract_Component::getChainedSettings($ret, $masterComponentClass, 'Trl', $copySettings, $copyFlags);
-        $ret['flags']['showInPageTreeAdmin'] = true;
         $ret['flags']['hasHome'] = true;
         $ret['flags']['hasLanguage'] = true;
         $ret['flags']['chainedType'] = 'Trl';
